--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DataStructure_C C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(DataStructure_C main.c)
+add_executable(DataStructure_C SelectionSort.c)
