--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(DataStructure_C C)
 set(CMAKE_C_STANDARD 99)
 
 #add_executable(DataStructure_C Assignment1_Program_1.4.c)
-#add_executable(DataStructure_C Assignment1_Program_1.4_a.c)
+add_executable(DataStructure_C Assignment1_Program_1.4_a.c)
 #add_executable(DataStructure_C Assignment1_Program_1.4_b.c)
-add_executable(DataStructure_C Assignment1_Program_1.4_c.c)
+#add_executable(DataStructure_C Assignment1_Program_1.4_c.c)
