--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -3,7 +3,10 @@ project(DataStructure_C C)
 
 set(CMAKE_C_STANDARD 99)
 
+#add_executable(DataStructure_C SelectionSort.c)
 #add_executable(DataStructure_C Assignment1_Program_1.4.c)
-add_executable(DataStructure_C Assignment1_Program_1.4_a.c Assignment1_Program_1.7_a.c Assignment1_Program_1.7_b.c)
+#add_executable(DataStructure_C Assignment1_Program_1.4_a.c)
 #add_executable(DataStructure_C Assignment1_Program_1.4_b.c)
 #add_executable(DataStructure_C Assignment1_Program_1.4_c.c)
+add_executable(DataStructure_C Assignment1_Program_1.7_a.c)
+#add_executable(DataStructure_C Assignment1_Program_1.7_b.c)
