--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -10,4 +10,4 @@ set(CMAKE_C_STANDARD 99)
 #add_executable(DataStructure_C Assignment1_Program_1.4_c.c)
 #add_executable(DataStructure_C Assignment1_Program_1.7.c)
 add_executable(DataStructure_C Assignment1_Problem_2_a.c)
-add_executable(DataStructure_C Assignment1_Problem_2_b.c)
+#add_executable(DataStructure_C Assignment1_Problem_2_b.c)
