Add Multiply code of Problem 3

--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -9,6 +9,6 @@ set(CMAKE_C_STANDARD 99)
 #add_executable(DataStructure_C Assignment1_Problem_1.4_a.c)
 #add_executable(DataStructure_C Assignment1_Problem_1.4_b.c)
 #add_executable(DataStructure_C Assignment1_Problem_1.4_c.c)
-add_executable(DataStructure_C Assignment1_Problem_2_a.c)
+#add_executable(DataStructure_C Assignment1_Problem_2_a.c)
 #add_executable(DataStructure_C Assignment1_Problem_2_b.c)
-#add_executable(DataStructure_C  Assignment1_Problem_3.c)
+add_executable(DataStructure_C  Assignment1_Problem_3.c)
