--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -10,5 +10,5 @@ set(CMAKE_C_STANDARD 99)
 #add_executable(DataStructure_C Assignment1_Problem_1_b.c)
 #add_executable(DataStructure_C Assignment1_Problem_1_c.c)
 #add_executable(DataStructure_C Assignment1_Problem_2_a.c)
-add_executable(DataStructure_C Assignment1_Problem_2_b.c)
-#add_executable(DataStructure_C  Assignment1_Problem_3.c)
+#add_executable(DataStructure_C Assignment1_Problem_2_b.c)
+add_executable(DataStructure_C  Assignment1_Problem_3.c)
