--- a/Assignment2/CMakeLists.txt
+++ b/Assignment2/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_C_STANDARD 99)
 #add_executable(Assignment2 Assignment2_Problem_1.c)
 #add_executable(Assignment2 Assignment2_Problem_2_b.c)
 #add_executable(Assignment2 Assignment2_Problem_2_c.c)
-add_executable(Assignment2 Assignment2_Problem_3_a.c)
-#add_executable(Assignment2 Assignment2_Problem_3_b.c)
+#add_executable(Assignment2 Assignment2_Problem_3_a.c)
+add_executable(Assignment2 Assignment2_Problem_3_b.c)
