Ready for Assignment 2 Problem 5 c

--- a/Assignment2/CMakeLists.txt
+++ b/Assignment2/CMakeLists.txt
@@ -3,8 +3,9 @@ project(Assignment2 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Assignment2 Assignment2_Problem_1.c)
+#add_executable(Assignment2 Assignment2_Problem_1.c)
 #add_executable(Assignment2 Assignment2_Problem_2_b.c)
 #add_executable(Assignment2 Assignment2_Problem_2_c.c)
 #add_executable(Assignment2 Assignment2_Problem_3_a.c)
 #add_executable(Assignment2 Assignment2_Problem_3_b.c)
+add_executable(Assignment2 Assignment2_Problem_5_c.c)
